04-deploy-k8s/frontend/service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce

---

apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend-service
  namespace: ecommerce
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: ecommerce-frontend
  type: ClusterIP
