04-deploy-k8s/frontend/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-frontend-ingress
  namespace: ecommerce
spec:
  ingressClassName: haproxy
  rules:
    - host: ecommerce-frontend.danny.vn
      http:
        paths:
          - backend:
              service:
                name: ecommerce-frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
